--- a/todo-app/todo-ui/public/index.html
+++ b/todo-app/todo-ui/public/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="src/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="src/css/font-awesome.min.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
