--- a/todo-app/todo-ui/public/index.html
+++ b/todo-app/todo-ui/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="src/css/bootstrap.min.css" rel="stylesheet">
     <link href="src/css/font-awesome.min.css" rel="stylesheet">
-    <title>Todo React App</title>
+    <title>TEST Todo React App</title>
   </head>
   <body>
     <noscript>
